--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,13 +10,15 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="financecontrol.MainActivity"
+            android:name="financecontrol.control.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="financecontrol.control.CategoryActivity" >
         </activity>
     </application>
 
