initial rails structure

--- a/web/finance-control/Gemfile
+++ b/web/finance-control/Gemfile
@@ -12,13 +12,13 @@ gem 'json'
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
-  gem 'sass-rails',   '~> 3.2.3'
-  gem 'coffee-rails', '~> 3.2.1'
+    gem 'sass-rails',   '~> 3.2.3'
+    gem 'coffee-rails', '~> 3.2.1'
 
-  # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-  # gem 'therubyracer'
+    # See https://github.com/sstephenson/execjs#readme for more supported runtimes
+    # gem 'therubyracer'
 
-  gem 'uglifier', '>= 1.0.3'
+    gem 'uglifier', '>= 1.0.3'
 end
 
 gem 'jquery-rails'
@@ -37,3 +37,20 @@ gem 'jquery-rails'
 
 # To use debugger
 # gem 'ruby-debug'
+
+# Login
+gem 'devise'
+
+group :development, :test do
+	# Tests
+	gem 'factory_girl_rails'
+  gem 'rspec-rails'
+	gem 'rspec-set'
+	gem 'valid_attribute'
+
+	# Tests coverage
+  	gem 'simplecov'
+
+    # To user debugger
+    gem 'debugger'
+end
