trying to create category

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,9 +2,10 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
-  username: 'username'
-  password: 'password'
-  host: <%= ENV['IP'] %>
+  # could9
+  # username: 'username'
+  # password: 'password'
+  # host: <%= ENV['IP'] %>
 
 development:
   <<: *default
